    on kfreebsd-any, to fix layout switch in textual d-i.

  [ Christian Perrier ]
  * Default to Russian layout with Ossetian variant for Ossetian
    language
  * Galician translation updates. Closes: #644055

  [ Colin Watson ]
  * Explicitly build-depend on liblocale-gettext-perl for kbdnames-maker,
    and likewise have keyboard-configuration depend on
    liblocale-gettext-perl.

 -- Samuel Thibault <sthibault@debian.org>  Tue, 23 Aug 2011 00:19:42 +0200

console-setup (1.73) unstable; urgency=low

  [ Anton Zinoviev ]
  * Minor additions to keyboard(5) and ckbcomp(1).
  * Add information about setupcon and ckbcomp-mini in the copyright file.
  * Use /lib/init/rw for temporary file if /tmp is mounted read-only.
    When testing whether the keymap has to be recompiled, do not assume
    that either [ file1 -ot file2 ] or [ file2 -ot file1 ] (files can be
    the same age).  Thanks to Jindřich Makovička (he provided a patch),
    Vincent Lefevre, Benoît MERLET and Tony Houghton. 
    Closes: #620228, #620491.

  [ Samuel Thibault ]
  * Remove br(abnt2) choice since br already provides the ABNT2-specific key.
  * Add Ethiopian to non-latin keymaps.
  * Add Kurdish default choice, set to critical like Turkish due to Q/F
    choice.

 -- Anton Zinoviev <zinoviev@debian.org>  Tue, 12 Apr 2011 21:46:54 +0300

console-setup (1.72) unstable; urgency=low

  * README: /etc/getty=>/etc/gettytab
  * debian/*.init: source /etc/default/locale to permit autodetection of
    the charmap when console-setup-mini operates without configuration
    file.
  * debian/*.init: do not test whether we are on the console, there are
    better tests inside setupcon.
  * setupcon: do not expect the existence of 'tty' (if /usr is not mounted
    'tty' will be unavailable).  Thanks to Sven Joachim, closes: #619462.
  * README.Debian: console-setup-mini no longer installs only a minimal
    set of fonts.  Without configuration file no font will be loaded.
  * A little Lintian cleaning: