@@ -4,7 +4,7 @@ COMMENT that were in the original u_vga16, yet they are clearer (less eye fatigu
 FONT -Bolkhov-VGA-Medium-R-Normal--16-160-75-75-C-80-iso10646-1
 SIZE 16 75 75
 FONTBOUNDINGBOX 8 16 0 -4
-STARTPROPERTIES 25
+STARTPROPERTIES 24
 FOUNDRY "Bolkhov"
 FAMILY_NAME "VGA"
 WEIGHT_NAME "Medium"
@@ -28,10 +28,32 @@ COPYRIGHT "Copyright (c) 2000 Dmitry Bolkhovityanov, bolkhov@inp.nsk.su"
 HOMEPAGE "http://www.inp.nsk.su/~bolkhov/files/fonts/univga/"
 NOTICE "VGA is a trademark of IBM Corporation."
 DEFAULT_CHAR 0
-_XMBDFED_INFO "Edited with xmbdfed 4.4."
-_GBDFED_INFO "Edited with gbdfed 1.3."
+_GBDFED_INFO "Edited with gbdfed 1.5."
 ENDPROPERTIES
-CHARS 182
+CHARS 183
+STARTCHAR bar
+ENCODING 124
+SWIDTH 480 0
+DWIDTH 8 0
+BBX 8 16 0 -4
+BITMAP
+00
+00
+18
+18
+18
+18
+18
+18
+18
+18
+18
+18
+00
+00
+00
+00
+ENDCHAR
 STARTCHAR C00ba
 ENCODING 1548
 SWIDTH 480 0
