@@ -19,6 +19,12 @@ console-setup (1.74) UNRELEASED; urgency=low
     and likewise have keyboard-configuration depend on
     liblocale-gettext-perl.
 
+  [ Anton Zinoviev ]
+  * Make U+007C in u_vga16.bdf to be a vertical line instead of broken
+    bar.  The fix is in u_vga16_fix.bdf together with the new arabic
+    letters from version 1.29.  Thanks to Bjarni Ingi Gislason,
+    closes: #646626.
+
  -- Samuel Thibault <sthibault@debian.org>  Tue, 23 Aug 2011 00:19:42 +0200
 
 console-setup (1.73) unstable; urgency=low
